infra/istio/overlays/grades/destinationrule-grades.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: grades
  namespace: sis
spec:
  host: grades
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
